# hs-datahand

./: Main.hs  README.md  build+program.sh  hs-datahand.cabal
DataHand/: KeyAliases.hs  Keys.hs  Layout.hs
DataHand/Layouts/: OriginalQWERTY.hs  ProgrammerDvorak.hs
src/: Main.hs
src/DataHand/: KeyAliases.hs  Keys.hs  Layout.hs  Remap.hs
src/DataHand/Layouts/: ProgrammerDvorak.hs
src/DataHand/Layouts/Games/: AgeOfWonders3.hs  DoTA2.hs
src/DataHand/USB/: Descriptors.hs
stm32f10x/: .gitignore  Makefile  NOTES.md  TODO.md
stm32f10x/hs_src/: DataHand  Main.hs  Main.hsc
stm32f10x/hs_src/Data/: EnumSet.hs  FlagSet.hs
stm32f10x/hs_src/Data/EnumSet/: PackedEnum.hs  Utility.hs
stm32f10x/hs_src/Data/FlagSet/: PackedRecord.hs
stm32f10x/hs_src/Foreign/Storable/: FixedArray.hs  Newtype.hs  Record.hs  RecordMinimalSize.hs  RecordReaderPtr.hs  Traversable.hs  TraversableUnequalSizes.hs
stm32f10x/hs_src/System/USB/: Descriptors.hs
